[package]
name = "msgpack-differ"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
eframe = { version = "0.29.1", features = ["persistence"] }
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["std"] }
rfd = "0.15.0"
rmpv = "1.3.0"
serde = { version = "1.0.213", features = ["serde_derive"] }
